# pychemist

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml  release.yaml  test.yaml
conda/: meta.yaml
pychemist/: __init__.py
pychemist/data/: financials.parquet
tests/: test_accessor.py  test_mutate.py  test_time_shift.py
