[project]
name = "Pychemist"
version = "0.0.2"
description = "Transform raw data into insights."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    { name = "Jeroen van Raak", email = "j.j.f.vanraak@uva.nl" }
]

urls = { Homepage = "https://github.com/vanraak/pychemist" }

dependencies = [
    "pandas>=2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

